--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,7 @@ Maintainer: M. Jiang <wjiang2@fhcrc.org>
 Depends: R (>= 2.14.0), flowCore
 Imports: Biobase,flowCore,flowViz,methods 
 License: Artistic-2.0
+SystemRequirements: netcdf 4.0.1, hdf5
 biocViews: Flowcytometry
 Collate: AllGeneric.R
          AllClasses.R
