--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: ncdfFlow
 Title: ncdfFlow: A package that provides ncdf based storage based flow cytometry data.
-Version: 0.99.0
+Version: 0.99.1
 Author: Mike Jiang,Greg Finak,N. Gopalakrishnan
 Description: Provides netCDF storage based methods and functions for manipulation of flow cytometry data.
 Maintainer: M. Jiang <wjiang2@fhcrc.org> 
 Depends: R (>= 2.14.0), flowCore
 Imports: Biobase,flowCore,flowViz,methods 
 License: Artistic-2.0
-SystemRequirements: netcdf 4.0.1, hdf5
+SystemRequirements: netcdf 4.1.3, hdf5, zlib
 biocViews: Flowcytometry
 Collate: AllGeneric.R
          AllClasses.R
