--- a/configure.ac
+++ b/configure.ac
@@ -1,53 +1,97 @@
-#                                               -*- Autoconf -*-
-# Process this file with autoconf to produce a configure script.
+AC_INIT([ncdfFlow],0.99.2)
 
-AC_PREREQ(2.67)
-AC_INIT([ncdfFlow],0.10.1)
-AC_CONFIG_SRCDIR([src/])
-
- : ${R_HOME=`R RHOME`}
-     if test -z "${R_HOME}"; then
-       echo "could not determine R_HOME"
-       exit 1
-     fi
-     CC=`"${R_HOME}/bin/R" CMD config CC`
-     CFLAGS=`"${R_HOME}/bin/R" CMD config CFLAGS`
-     CPPFLAGS=`"${R_HOME}/bin/R" CMD config CPPFLAGS`
-     LDFLAGS=`"${R_HOME}/bin/R" CMD config LDFLAGS`
-
-# Checks for programs.
-AC_PROG_CC
-
-AC_ARG_WITH([netcdf],[AS_HELP_STRING([--with-netcdf], [Prefix to the location of the netcdf installation])],[
-
-if test -e $with_netcdf/include -a -e $with_netcdf/lib -a -d $with_netcdf/include -a -d $with_netcdf/lib ; then
-	AC_MSG_RESULT($with_netcdf)
-		CFLAGS="-I$with_netcdf/include $CFLAGS"
-	CPPFLAGS="-I$with_netcdf/include $CPPFLAGS"
-	LDFLAGS="-L$with_netcdf/lib $LDFLAGS"
-	LIBS="-lnetcdf"
+AC_ARG_WITH([nc-config],
+    AC_HELP_STRING([--with-nc-configh=PATH], [location of nc-config]),
+    [NC_CONFIG=$withval])
+if test -z "${NC_CONFIG}"; then
+   AC_PATH_PROG(NC_CONFIG, nc-config)
 else
-AC_CHECK_LIB([netcdf],[nc_def_var_deflate],[],AC_MSG_ERROR([netCDF library not found!]))
+  if ! test -x "${NC_CONFIG}"; then
+    NC_CONFIG=""
+    AC_MSG_WARN(['NC_CONFIG' is set to an invalid value and will be ignored])
+  fi
 fi
 
-],[
-AC_CHECK_LIB([netcdf],[nc_def_var_deflate],[],AC_MSG_ERROR([netCDF library not found!]))
-])
-# Checks for libraries.
-#AC_CHECK_LIB([netcdf],[nc_def_var_deflate],[],AC_MSG_ERROR([netCDF library not found!]))
+if test -n "${NC_CONFIG}"; then
+  PKG_CPPFLAGS=`${NC_CONFIG} --cflags`
+  PKG_LIBS=`${NC_CONFIG} --libs`
+  NC4=`${NC_CONFIG} --has-nc4`
+        if  test $NC4 != "yes"; then
+                echo "Need netcdf version 4 linked against hdf5"
+                exit 1
+        fi
+else
+: ${R_HOME=`R RHOME`}
+if test -z "${R_HOME}"; then
+        echo "Could not determine R_HOME"
+	exit 1
+fi
+CC=`${R_HOME}/bin/R CMD config CC`
+CFLAGS=`${R_HOME}/bin/R CMD config CFLAGS`
+AC_PROG_CC
+CPP=`"${R_HOME}/bin/R" CMD config CPP`
+CPPFLAGS=`"${R_HOME}/bin/R" CMD config CPPFLAGS`
+AC_PROG_CPP
 
-# Checks for header files.
-AC_CHECK_HEADERS([stdlib.h])
-AC_CHECK_HEADERS([netcdf.h])
+AC_ARG_WITH([netcdf-include],
+    AC_HELP_STRING([--with-netcdf-include=DIR], 
+                   [location of netcdf header files]),
+    [netcdf_include_path=$withval])
+if test -n "${netcdf_include_path}"; then
+   CPPFLAGS="-I${netcdf_include_path} ${CPPFLAGS}"
+elif test -n ${NETCDF_INCLUDE}; then
+   CPPFLAGS="-I${NETCDF_INCLUDE} ${CPPFLAGS}"
+fi
+AC_CHECK_HEADERS(netcdf.h, , AC_MSG_ERROR(netcdf header netcdf.h not found))
+
+AC_ARG_WITH([netcdf-lib],
+    AC_HELP_STRING([--with-netcdf-lib=DIR], [location of netcdf libraries]),
+    [netcdf_lib_path=$withval])
+if test -n "${netcdf_lib_path}"; then
+   LIBS="-L${netcdf_lib_path}"
+elif test -n "${NETLIB_LIB}"; then
+   LIBS="-L${NETCDF_LIB}"
+fi
+
+dnl Extra libraries: we try '-lhdf5 -lhdf5_hl -lcurl -lz' if needed
+AC_ARG_WITH([netcdf-extra-libs],
+    AC_HELP_STRING([--with-netcdf-extra-libs=], [extra libs for netcdf]),
+    [netcdf_extras=$withval])
+if test -n "${netcdf_extras}"; then
+   EXTRAS="-L${netcdf_extras}"
+elif test -n "${NETLIB_EXTRAS}"; then
+   EXTRAS="-L${NETCDF_EXTRAS}"
+fi
+
+# Optional library path for HDF5
+AC_ARG_WITH([hdf5-lib],
+    AC_HELP_STRING([--with-hdf5-lib=DIR], [location of hdf5 libraries]),
+    [hdf5_lib_path=$withval])
+if test -n "$hdf5_lib_path"; then
+   LIBS=-L${hdf5_lib_path}"
+eiif test -n "$HDF5_LIB"; then
+   LIBS=-L${HDF5_LIB}"
+fi
 
 
-# Checks for typedefs, structures, and compiler characteristics.
-AC_TYPE_SIZE_T
-AC_HEADER_STDBOOL
+AC_CHECK_LIB(netcdf, nc_open, [],
+[
+    AC_CHECK_LIB(netcdf, nc_create, [have_netcdf_hdf5=TRUE],
+                 AC_MSG_ERROR(netcdf library not found),
+                 [-lhdf5 -lhdf5_hl -lcurl -lz])
+    if test "${have_netcdf_hdf5}" = TRUE; then
+        LIBS="${LIBS} -lnetcdf -lhdf5 -lhdf5_hl -lcurl -lz"
+    else
+	echo "Must have netcdf4 linked against hdf5 to use this package"
+	exit 1
+    fi
+], [$EXTRAS])
 
-# Checks for library functions.
-AC_SUBST(LIBS)
-AC_SUBST(CPPFLAGS)
-AC_SUBST(LDFLAGS)
-AC_CONFIG_FILES([src/Makevars])
-AC_OUTPUT
+PKG_CPPFLAGS=${CPPFLAGS}
+PKG_LIBS=${LIBS}
+fi
+
+AC_SUBST(PKG_CPPFLAGS)
+AC_SUBST(PKG_LIBS)
+
+AC_OUTPUT(src/Makevars)
