made cerntain enhancements for Common subdirectories: ./base and ../../Rbuild/library//base
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/ncdfFlow@61381 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: ncdfFlow
-Title: ncdfFlow: A package that provides ncdf based storage based flow cytometry data.
-Version: 1.1.2
+Title: ncdfFlow: A package that provides ncdf based storage for flow cytometry data.
+Version: 1.1.2 
 Author: Mike Jiang,Greg Finak,N. Gopalakrishnan
 Description: Provides netCDF storage based methods and functions for manipulation of flow cytometry data.
 Maintainer: M. Jiang <wjiang2@fhcrc.org> 
 Depends: R (>= 2.14.0), flowCore
 Imports: Biobase,flowCore,flowViz,methods 
 License: Artistic-2.0
-SystemRequirements: netcdf 4.1.3, hdf5, zlib
+SystemRequirements: netcdf 4.0.1, hdf5
 biocViews: Flowcytometry
 Collate: AllGeneric.R
          AllClasses.R
@@ -20,4 +20,4 @@ Collate: AllGeneric.R
          ncdfIO.R
          ncdfFlowList-methods.R
          ncdfFlowSet-plot-methods.R
-Packaged: 2011-10-14 23:51:24 UTC; mike
+Packaged: 2011-04-04 18:33:38 UTC; Jiang
