--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ncdfFlow
 Title: ncdfFlow: A package that provides ncdf based storage for flow cytometry data.
-Version: 1.3.0
+Version: 1.3.1
 Author: Mike Jiang,Greg Finak,N. Gopalakrishnan
 Description: Provides netCDF storage based methods and functions for manipulation of flow cytometry data.
 Maintainer: M. Jiang <wjiang2@fhcrc.org> 
@@ -8,7 +8,7 @@ Depends: R (>= 2.14.0), flowCore
 Imports: Biobase,flowCore,flowViz,methods 
 License: Artistic-2.0
 SystemRequirements: netcdf 4.0.1, hdf5
-biocViews: Flowcytometry
+biocViews: FlowCytometry
 Collate: AllGeneric.R
          AllClasses.R
          AllFunctions.R
