bundle netcdf c library
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/ncdfFlow@72409 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,8 @@ Version: 1.5.10
 Author: Mike Jiang,Greg Finak,N. Gopalakrishnan
 Description: Provides netCDF storage based methods and functions for manipulation of flow cytometry data.
 Maintainer: M. Jiang <wjiang2@fhcrc.org> 
-Depends: R (>= 2.14.0), flowCore
-Imports: Biobase,flowCore,flowViz,methods 
+Depends: R (>= 2.14.0), flowCore (>= 1.25.9)
+Imports: Biobase,flowCore,flowViz (>= 1.23.1),methods 
 License: Artistic-2.0
 SystemRequirements: netcdf 4.0.1, hdf5
 biocViews: FlowCytometry
