the ncdfFLowList class now inherit list thus lapply can be used directly, also remove the unneccesary methods associated with this class,only keep rbind2 and show methods. close #3

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,7 +34,7 @@ importFrom(methods, as, is, new)
 
 exportClasses(ncdfFlowSet,ncdfFlowList)
 
-export(ncfsUnlink,clone.ncdfFlowSet,read.ncdfFlowSet,ncdfExprs,NcdfFlowSetToFlowSet,ncdfFlowList)
+export(ncfsUnlink,clone.ncdfFlowSet,read.ncdfFlowSet,ncdfExprs,NcdfFlowSetToFlowSet)
 
 exportMethods("show","[[","[","colnames","parameters","compensate","rbind2",
 				"transform","ncfsApply","Subset","split","getIndices","updateIndices"
