--- a/configure.ac
+++ b/configure.ac
@@ -1,20 +1,22 @@
 AC_INIT([ncdfFlow],1.5.10,wjiang2@fhcrc.org)
 AC_ARG_WITH([bundled-netcdf],
-    AC_HELP_STRING([--with-bundled-netcdf], [whether to use bundled netcdf library]),
+    [AC_HELP_STRING([--with-bundled-netcdf=yes/no]
+    				, [whether to build ncdfFlow with the bundled netcdf library]
+    				)
+    ],
     [NC_BOUNDLED="${withval}"],
     [NC_BOUNDLED="yes"]
 )
+
 # library path for HDF5
 AC_ARG_WITH([hdf5],
-    AC_HELP_STRING([--with-hdf5=DIR], [location of hdf5 libraries]),
+    [AC_HELP_STRING([--with-hdf5=DIR], [location of hdf5 libraries])],
     [hdf5_path="${withval}"]
 )
 if test -n "$hdf5_path"; then
-	HDF5_LIBS="-L${hdf5_path}/lib64 -L${hdf5_path}/lib"
-	HDF5_CPPFLAGS="-I${hdf5_path}/include"
+	HDF5_LIBS="-L${hdf5_path}/lib64"
 else
-	HDF5_LIBS="-L/usr/lib64 -L$/usr/lib -L/usr/local/lib64 -L/usr/local/lib"
-	HDF5_CPPFLAGS="-I/usr/include -I/usr/local/include"
+	HDF5_LIBS="-L/usr/lib64 -L/usr/local/lib64"
 fi
 HDF5_LIBS="${HDF5_LIBS} -lhdf5 -lhdf5_hl"
 
@@ -28,8 +30,10 @@ HDF5_LIBS="${HDF5_LIBS} -lhdf5 -lhdf5_hl"
 		CPPFAGS=`${R_HOME}/bin/R CMD config CPPFLAGS`
 		LDFLAGS=`${R_HOME}/bin/R CMD config LDFLAGS`
 		AC_PROG_CC
-		
-if test ${NC_BOUNDLED}="yes"; then
+
+	
+if test ${NC_BOUNDLED} = "yes"; then
+
 	PKG_DIR=`pwd`
 	cd src
 	BASENETCDFNAME="trimmed_netcdf-4.2.1.1"
@@ -55,7 +59,7 @@ if test ${NC_BOUNDLED}="yes"; then
 else
 
 	AC_ARG_WITH([nc-config],
-	    AC_HELP_STRING([--with-nc-configh=PATH], [location of nc-config]),
+	    [AC_HELP_STRING([--with-nc-config=PATH], [location of nc-config])],
 	    [NC_CONFIG=$withval])
 	if test -z "${NC_CONFIG}"; then
 	   AC_PATH_PROG(NC_CONFIG, nc-config)
@@ -67,19 +71,19 @@ else
 	fi
 
 	if test -n "${NC_CONFIG}"; then
-	  PKG_CPPFLAGS=`${NC_CONFIG} --cflags`
-	  PKG_LIBS=`${NC_CONFIG} --libs`
+	
+	  NETCDF_CPPFLAGS=`${NC_CONFIG} --cflags`
+	  NETCDF_LIBS=`${NC_CONFIG} --libs`
 	  NC4=`${NC_CONFIG} --has-nc4`
 		if  test $NC4 != "yes"; then
 			echo "Need netcdf version 4 linked against hdf5"
 			exit 1
 		fi
 	else
-		
-	
+
 		AC_ARG_WITH([netcdf-include],
-		    AC_HELP_STRING([--with-netcdf-include=DIR], 
-				   [location of netcdf header files]),
+		    [AC_HELP_STRING([--with-netcdf-include=DIR], 
+				   [location of netcdf header files])],
 		    [netcdf_include_path=$withval])
 		if test -n "${netcdf_include_path}"; then
 		   NETCDF_CPPFLAGS="-I${netcdf_include_path}"
@@ -91,7 +95,7 @@ else
 		AC_CHECK_HEADERS(netcdf.h, , AC_MSG_ERROR(netcdf header netcdf.h not found))
 	
 		AC_ARG_WITH([netcdf-lib],
-		    AC_HELP_STRING([--with-netcdf-lib=DIR], [location of netcdf libraries]),
+		    [AC_HELP_STRING([--with-netcdf-lib=DIR], [location of netcdf libraries])],
 		    [netcdf_lib_path=$withval])
 		if test -n "${netcdf_lib_path}"; then
 		   NETCDF_LIBS="-L${netcdf_lib_path}"
@@ -103,7 +107,7 @@ else
 	fi
 fi
 
-PKG_CPPFLAGS="${NETCDF_CPPFLAGS} ${HDF5_CPPFLAGS}"
+PKG_CPPFLAGS="${NETCDF_CPPFLAGS}"
 PKG_LIBS="${NETCDF_LIBS} ${HDF5_LIBS} ${LDFLAGS}"
 
 AC_MSG_NOTICE([Using the following compilation and linking flags for ncdfFlow])
