--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -11,12 +11,42 @@ netcdf_src=${wildcard \
 netcdf_objs=${netcdf_src:.c=.o}
 
 PKG_CPPFLAGS=@PKG_CPPFLAGS@ ${netcdf_cflags}
-
 PKG_LIBS=@PKG_LIBS@ ${netcdf_objs}
 
+USERDIR =	../inst/lib
+USERLIB	=	libncdfFlow$(DYLIB_EXT)
+USERLIBST =	libncdfFlow.a
 
-.PHONY: all
 
-all: ${SHLIB}
+all: 	$(SHLIB) userLibrary
 
-${SHLIB} : ${netcdf_objs}
+$(SHLIB): $(OBJECTS) $(netcdf_objs)
+		
+userLibrary: 	$(USERLIB) $(USERLIBST)
+		-@if test ! -e $(USERDIR)$(R_ARCH); then mkdir -p $(USERDIR)$(R_ARCH); fi
+		cp $(USERLIB) $(USERDIR)$(R_ARCH)
+		cp $(USERLIBST) $(USERDIR)$(R_ARCH)
+		rm $(USERLIB) $(USERLIBST)
+
+$(USERLIB):$(OBJECTS) $(netcdf_objs)
+		@echo target $(USERLIB)
+		$(SHLIB_LD) -o $(USERLIB) $(SHLIB_LDFLAGS) $(OBJECTS) $(netcdf_objs)
+		@if test -e "/usr/bin/install_name_tool"; then /usr/bin/install_name_tool -id $(R_PACKAGE_DIR)/lib$(R_ARCH)/$(USERLIB) $(USERLIB); fi
+
+$(USERLIBST): 	$(OBJECTS) $(netcdf_objs)
+		@echo target $@
+		$(AR) rcs $(USERLIBST) $(OBJECTS) $(netcdf_objs)
+		@if test -n "$(RANLIB)"; then $(RANLIB) $(USERLIBST); fi
+
+.PHONY: 	all clean userLibrary
+
+clean:
+	@echo $(OBJECTS)
+		rm -f $(OBJECTS) $(netcdf_objs) $(SHLIB) $(USERLIB) $(USERLIBST)
+
+
+
+
+
+
+
