--- a/configure.ac
+++ b/configure.ac
@@ -16,17 +16,50 @@ AC_INIT([ncdfFlow],1.5.10,wjiang2@fhcrc.org)
 #	AC_MSG_NOTICE([using extenal hdf5 library])
 	
 	AC_ARG_WITH([hdf5],
-	    [AC_HELP_STRING([--with-hdf5=DIR], [location of hdf5 libraries])],
-	    [hdf5_path="${withval}"]
+	    [AC_HELP_STRING([--with-hdf5=DIR], [prefix of hdf5 libraries])],
+	    [HDF5_PREFIX="${withval}"]
 	)
-	if test -n "$hdf5_path"; then
-		HDF5_LIBS="-L${hdf5_path}/lib64"
-		AC_MSG_NOTICE([hdf5 library path:${HDF5_LIBS}])
-	else
-		HDF5_LIBS="-L/usr/lib64 -L/usr/local/lib64"
-		AC_MSG_NOTICE([trying default hdf5 library path:${HDF5_LIBS}])
+	HDF5_FILE_TOTEST="libhdf5.so"
+	#if prefix is set by user then search for libhdf5 under that path
+	if test -n "${HDF5_PREFIX}"; then
+			for HDF5_LIB_PATH in lib lib64
+			do
+			HDF5_LIB_PATH_ABS=${HDF5_PREFIX}/${HDF5_LIB_PATH}
+			AC_MSG_NOTICE([search for hdf5 library in: ${HDF5_LIB_PATH_ABS}])
+			if test -e ${HDF5_LIB_PATH_ABS}/${HDF5_LIB_TOTEST}; then
+				HDF5_LIBS="-L${HDF5_LIB_PATH_ABS}"
+				HDF5_LIBS="${HDF5_LIBS} -lhdf5 -lhdf5_hl"
+				HDF5_CFLAGS="-I${HDF5_PREFIX}/include"
+				AC_MSG_NOTICE([found hdf5 library in: ${HDF5_LIB_PATH_ABS}])
+				break;
+			fi
+			done
+	# if prefix not provided,then search some default standard location			
+	else  
+		for HDF5_PREFIX in "/usr" "/usr/local"
+		do
+			for HDF5_LIB_PATH in lib lib64
+			do
+			HDF5_LIB_PATH_ABS=${HDF5_PREFIX}/${HDF5_LIB_PATH}
+			AC_MSG_NOTICE([search for hdf5 library in: ${HDF5_LIB_PATH_ABS}])
+			if test -e ${HDF5_LIB_PATH_ABS}/${HDF5_LIB_TOTEST}; then
+				HDF5_LIBS="-L${HDF5_LIB_PATH_ABS}"
+				HDF5_LIBS="${HDF5_LIBS} -lhdf5 -lhdf5_hl"
+				HDF5_CFLAGS="-I${HDF5_PREFIX}/include"
+				AC_MSG_NOTICE([found hdf5 library in: ${HDF5_LIB_PATH_ABS}])
+				break;
+			fi
+			done
+		if test -n "${HDF5_LIBS}"; then
+			break
+		fi	
+		done
 	fi
-	HDF5_LIBS="${HDF5_LIBS} -lhdf5 -lhdf5_hl"
+	
+	if test -z "${HDF5_LIBS}"; then
+			AC_MSG_ERROR([hdf5 library not found in "${HDF5_PREFIX}"])
+	fi
+	
 
 	
 
@@ -42,7 +75,7 @@ else
 fi
 cd ../
 
-PKG_CPPFLAGS=
+PKG_CPPFLAGS=${HDF5_CFLAGS}
 PKG_LIBS="${HDF5_LIBS}"
 
 AC_MSG_NOTICE([Using the following compilation and linking flags for ncdfFlow])
