--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -29,19 +29,17 @@ userLibrary: 	$(USERLIB) $(USERLIBST)
 		rm $(USERLIB) $(USERLIBST)
 
 #simply copy the SHLIB instead of rebuilding it
+#make sure to insert the full path of lib since mac has problem to find it at run time
 $(USERLIB):$(SHLIB)
 	cp $(SHLIB) $(USERLIB) 
-
 #note that $ALL_LIBS contains $(netcdf_objs) already
-#$(USERLIB):$(OBJECTS) $(netcdf_objs)
-#		@echo target $(USERLIB)
-#		$(SHLIB_LD) -o $(USERLIB) $(SHLIB_LDFLAGS) $(OBJECTS) $(ALL_LIBS) 
-#		@if test -e "/usr/bin/install_name_tool"; then /usr/bin/install_name_tool -id $(R_PACKAGE_DIR)/lib$(R_ARCH)/$(USERLIB) $(USERLIB); fi
+		@if test -e "/usr/bin/install_name_tool"; then /usr/bin/install_name_tool -id $(R_PACKAGE_DIR)/lib$(R_ARCH)/$(USERLIB) $(USERLIB); fi
 
-$(USERLIBST): 	$(OBJECTS) $(netcdf_objs)
-		@echo target $@
-		$(AR) rcs $(USERLIBST) $(OBJECTS) $(netcdf_objs)
-		@if test -n "$(RANLIB)"; then $(RANLIB) $(USERLIBST); fi
+#static lib doesn't work since it misses the info of hdf5
+#$(USERLIBST): 	$(OBJECTS) $(netcdf_objs)
+#		@echo target $@
+#		$(AR) rcs $(USERLIBST) $(OBJECTS) $(netcdf_objs)
+#		@if test -n "$(RANLIB)"; then $(RANLIB) $(USERLIBST); fi
 
 .PHONY: 	all clean userLibrary
 
