--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -22,11 +22,10 @@ all: 	$(SHLIB) userLibrary
 
 $(SHLIB): $(OBJECTS) $(netcdf_objs)
 		
-userLibrary: 	$(USERLIB) $(USERLIBST)
+userLibrary: 	$(USERLIB)
 		-@if test ! -e $(USERDIR)$(R_ARCH); then mkdir -p $(USERDIR)$(R_ARCH); fi
 		cp $(USERLIB) $(USERDIR)$(R_ARCH)
-		cp $(USERLIBST) $(USERDIR)$(R_ARCH)
-		rm $(USERLIB) $(USERLIBST)
+		rm $(USERLIB)
 
 #simply copy the SHLIB instead of rebuilding it
 #make sure to insert the full path of lib since mac has problem to find it at run time
