--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -1,3 +1,11 @@
+#  GNUMakefile
+ 
+# Just a snippet to stop executing under other make(1) commands
+# that won't understand these lines
+ifneq (,)
+This makefile requires GNU Make.
+endif
+
 netcdf_basename=@netcdf_basename@
 
 netcdf_cflags=-I$(netcdf_basename)/ -I$(netcdf_basename)/include
