--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,4 +40,5 @@ export(ncfsUnlink,clone.ncdfFlowSet,read.ncdfFlowSet,NcdfFlowSetToFlowSet,as.flo
 exportMethods("show","[[","[","[[<-","colnames","parameters","compensate","rbind2",
 				"transform","ncfsApply","Subset","split","getIndices","updateIndices"
 				,"initIndices","ncdfFlowSet","ncdfFlowSet_sync","ncdfFlowSet_open","addFrame"
-				,"xyplot","densityplot","colnames<-")
+				,"xyplot","densityplot","colnames<-"
+				, "lapply", "pData" ,"pData<-", "phenoData","length", "sampleNames")
