fix description file
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/branches/RELEASE_2_13/madman/Rpacks/ncdfFlow@85522 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Depends:
     flowCore (>= 1.28.20),
     flowViz (>= 1.26.01)
 Imports:
-    Biobase,flowCore,flowViz (>= 1.27.11),methods,zlibbioc
+    Biobase,flowCore,flowViz,methods,zlibbioc
 License: Artistic-2.0
 SystemRequirements: hdf5 (>= 1.8.0)
 biocViews: FlowCytometry
