--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ exportMethods(ncdfFlowSet)
 exportMethods(ncfsApply)
 exportMethods(pData)
 exportMethods(phenoData)
+exportMethods(rbind2)
 exportMethods(split)
 exportMethods(transform)
 exportMethods(unlink)
