--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: ncdfFlow
 Title: ncdfFlow: A package that provides ncdf based storage for flow cytometry
     data.
-Version: 2.9.23
+Version: 2.11.27
 Author: Mike Jiang,Greg Finak,N. Gopalakrishnan
 Description: Provides netCDF storage based methods and functions for
     manipulation of flow cytometry data.
@@ -12,20 +12,9 @@ Depends:
     flowViz
 Imports:
     Biobase,flowCore,flowViz,methods,zlibbioc
+Suggests:
+    testthat
 License: Artistic-2.0
 SystemRequirements: hdf5 (>= 1.8.0)
 biocViews: FlowCytometry
-Collate:
-    'AllGeneric.R'
-    'AllClasses.R'
-    'AllFunctions.R'
-    'ncdfFlowSet-accessors.R'
-    'ncdfFlowSet-split-methods.R'
-    'ncdfFlowSet-Subset-methods.R'
-    'ncdfFlowSet-rbind-methods.R'
-    'bitVector.R'
-    'ncdfIO.R'
-    'ncdfFlowList-methods.R'
-    'ncdfFlowSet-plot-methods.R'
-    'Ldpath.R'
 Packaged: 2011-04-04 18:33:38 UTC; Jiang
