add phenoData<- method for ncdfFlowList

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ exportMethods("[[")
 exportMethods("[[<-")
 exportMethods("colnames<-")
 exportMethods("pData<-")
+exportMethods("phenoData<-")
 exportMethods("sampleNames<-")
 exportMethods(Subset)
 exportMethods(colnames)
