--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,8 @@ Maintainer: Mike Jiang <wjiang2@fhcrc.org>
 Depends:
     R (>= 2.14.0),
     flowCore,
-    flowViz
+    flowViz,
+    BH
 Imports:
     Biobase,flowCore,flowViz,methods,zlibbioc
 Suggests:
@@ -18,3 +19,4 @@ License: Artistic-2.0
 SystemRequirements: hdf5 (>= 1.8.0)
 biocViews: FlowCytometry
 Packaged: 2011-04-04 18:33:38 UTC; Jiang
+LinkingTo: Rcpp
