--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,10 +7,12 @@ export(clone.ncdfFlowSet)
 export(getFileName)
 export(getIndices)
 export(initIndices)
+export(load_ncfs)
 export(ncdfFlowList)
 export(ncdfFlowSet)
 export(ncfsApply)
 export(read.ncdfFlowSet)
+export(save_ncfs)
 export(unlink)
 export(updateIndices)
 exportClasses(ncdfFlowList)
