clean up imports and import BioGenerics

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,26 +43,17 @@ exportMethods(transform)
 exportMethods(unlink)
 exportMethods(updateIndices)
 exportMethods(xyplot)
+import(BiocGenerics)
+import(methods)
 import(zlibbioc)
 importClassesFrom(Biobase,AnnotatedDataFrame)
 importClassesFrom(flowCore,filter)
 importClassesFrom(flowCore,filterResultList)
 importClassesFrom(flowCore,flowFrame)
 importClassesFrom(flowCore,flowSet)
-importClassesFrom(methods,ANY)
-importClassesFrom(methods,character)
-importClassesFrom(methods,environment)
-importClassesFrom(methods,factor)
-importClassesFrom(methods,formula)
-importClassesFrom(methods,integer)
-importClassesFrom(methods,list)
-importClassesFrom(methods,logical)
 importFrom(Biobase,copyEnv)
 importFrom(flowCore,read.FCS)
 importFrom(flowCore,read.FCSheader)
-importFrom(methods,as)
-importFrom(methods,is)
-importFrom(methods,new)
 importMethodsFrom(Biobase,"description<-")
 importMethodsFrom(Biobase,"exprs<-")
 importMethodsFrom(Biobase,"pData<-")
@@ -94,5 +85,4 @@ importMethodsFrom(flowCore,transform)
 importMethodsFrom(flowViz,densityplot)
 importMethodsFrom(flowViz,histogram)
 importMethodsFrom(flowViz,xyplot)
-importMethodsFrom(methods,show)
 useDynLib("ncdfFlow",.registration=TRUE, .fixes = "C_ncdfFlow_")
