--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: ncdfFlow
 Title: ncdfFlow: A package that provides HDF5 based storage for flow cytometry
     data.
-Version: 2.17.0
+Version: 2.17.1
 Author: Mike Jiang,Greg Finak,N. Gopalakrishnan
 Description: Provides HDF5 storage based methods and functions for
     manipulation of flow cytometry data.
@@ -11,9 +11,10 @@ Depends:
     flowCore,
     flowViz,
     RcppArmadillo,
+    methods,
     BH
 Imports:
-    Biobase,flowCore,flowViz,methods,zlibbioc
+    Biobase,BiocGenerics,flowCore,flowViz,zlibbioc
 Suggests:
     testthat,parallel
 License: Artistic-2.0
