add markernames methods for ncdfFlowList. RGLab/flowWorkspace#192

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Description: Provides HDF5 storage based methods and functions for
 Maintainer: Mike Jiang <wjiang2@fhcrc.org>
 Depends:
     R (>= 2.14.0),
-    flowCore,
+    flowCore(>= 1.37.15),
     flowViz,
     RcppArmadillo,
     methods,
