--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ exportMethods("[")
 exportMethods("[[")
 exportMethods("[[<-")
 exportMethods("colnames<-")
+exportMethods("markernames<-")
 exportMethods("pData<-")
 exportMethods("phenoData<-")
 exportMethods("sampleNames<-")
@@ -33,6 +34,7 @@ exportMethods(getIndices)
 exportMethods(histogram)
 exportMethods(initIndices)
 exportMethods(lapply)
+exportMethods(markernames)
 exportMethods(ncdfFlowSet)
 exportMethods(ncfsApply)
 exportMethods(pData)
@@ -52,6 +54,8 @@ importClassesFrom(flowCore,filterResultList)
 importClassesFrom(flowCore,flowFrame)
 importClassesFrom(flowCore,flowSet)
 importFrom(Biobase,copyEnv)
+importFrom(flowCore,"markernames<-")
+importFrom(flowCore,markernames)
 importFrom(flowCore,read.FCS)
 importFrom(flowCore,read.FCSheader)
 importMethodsFrom(Biobase,"description<-")
