--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,3 +21,4 @@ SystemRequirements: hdf5 (>= 1.8.0)
 biocViews: FlowCytometry
 Packaged: 2011-04-04 18:33:38 UTC; Jiang
 LinkingTo: Rcpp,RcppArmadillo,BH
+RoxygenNote: 5.0.1
