link to Rhdf5lib
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/ncdfFlow@131095 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,8 +21,7 @@ Imports:
 Suggests:
     testthat,parallel
 License: Artistic-2.0
-SystemRequirements: hdf5 (>= 1.8.0)
 biocViews: FlowCytometry
 Packaged: 2011-04-04 18:33:38 UTC; Jiang
-LinkingTo: Rcpp,RcppArmadillo,BH, rhdf5(>= 2.19.7)
+LinkingTo: Rcpp,RcppArmadillo,BH, Rhdf5lib
 RoxygenNote: 5.0.1
