rm .registration from useDynLib call to avoid breaking .Call caused by latest Rcpp

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,4 +89,4 @@ importMethodsFrom(flowCore,transform)
 importMethodsFrom(flowViz,densityplot)
 importMethodsFrom(flowViz,histogram)
 importMethodsFrom(flowViz,xyplot)
-useDynLib("ncdfFlow",.registration=TRUE, .fixes = "C_ncdfFlow_")
+useDynLib("ncdfFlow")
