--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: ncdfFlow
 Title: ncdfFlow: A package that provides HDF5 based storage for flow cytometry
     data.
-Version: 2.29.0
+Version: 2.29.1
 Author: Mike Jiang,Greg Finak,N. Gopalakrishnan
 Description: Provides HDF5 storage based methods and functions for
     manipulation of flow cytometry data.
@@ -17,7 +17,7 @@ Imports:
 Suggests:
     testthat,parallel
 License: Artistic-2.0
-biocViews: FlowCytometry
+biocViews: ImmunoOncology, FlowCytometry
 Packaged: 2011-04-04 18:33:38 UTC; Jiang
 LinkingTo: Rcpp,RcppArmadillo,BH, Rhdf5lib
 RoxygenNote: 6.0.1
