--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ exportMethods("[")
 exportMethods("[[")
 exportMethods("[[<-")
 exportMethods("colnames<-")
+exportMethods("keyword<-")
 exportMethods("markernames<-")
 exportMethods("pData<-")
 exportMethods("phenoData<-")
@@ -33,6 +34,7 @@ exportMethods(filter)
 exportMethods(getIndices)
 exportMethods(histogram)
 exportMethods(initIndices)
+exportMethods(keyword)
 exportMethods(lapply)
 exportMethods(markernames)
 exportMethods(ncdfFlowSet)
