--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,7 +56,9 @@ importClassesFrom(flowCore,filterResultList)
 importClassesFrom(flowCore,flowFrame)
 importClassesFrom(flowCore,flowSet)
 importFrom(Biobase,copyEnv)
+importFrom(flowCore,"keyword<-")
 importFrom(flowCore,"markernames<-")
+importFrom(flowCore,keyword)
 importFrom(flowCore,markernames)
 importFrom(flowCore,read.FCS)
 importFrom(flowCore,read.FCSheader)
