--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,9 +13,9 @@ Depends:
     methods,
     BH
 Imports:
-    Biobase,BiocGenerics,flowCore,flowViz,zlibbioc
+    Biobase,BiocGenerics,flowCore,zlibbioc
 Suggests:
-    testthat,parallel,flowStats
+    testthat,parallel,flowStats,flowViz
 License: Artistic-2.0
 biocViews: ImmunoOncology, FlowCytometry
 Packaged: 2011-04-04 18:33:38 UTC; Jiang
