--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,9 +15,10 @@ Depends:
 Imports:
     Biobase,BiocGenerics,flowCore,zlibbioc
 Suggests:
-    testthat,parallel,flowStats
+    testthat,parallel,flowStats,knitr
 License: Artistic-2.0
 biocViews: ImmunoOncology, FlowCytometry
 Packaged: 2011-04-04 18:33:38 UTC; Jiang
 LinkingTo: Rcpp,RcppArmadillo,BH, Rhdf5lib
+VignetteBuilder: knitr
 RoxygenNote: 7.1.0
