--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,7 @@ on:
     branches: [ release, master ]
   pull_request:
     branches: [ release, master ]
+  workflow_dispatch:
 
 jobs:
   build:
@@ -45,6 +46,15 @@ jobs:
 
       - uses: r-lib/actions/setup-pandoc@v1
       
+      - uses: r-lib/actions/setup-tinytex@v1
+      - run: tlmgr --version
+      
+      - name: add more tex pkgs
+        run: |
+          install.packages('tinytex')
+          tinytex:::install_yihui_pkgs()
+        shell: Rscript {0}
+        
       - name: set token for cytoinstaller(and remotes) to increase github API rate limit
         env:
           SUPER_SECRET: ${{ secrets.CYTOINSTALLER_TOKEN }}
